fixed the sidebar z-index:3

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,11 +27,10 @@ svg{
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     top: 0;
     right: 0;
     background-color: #bcfffb;
-    background-color: #041615;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 8rem;
@@ -428,14 +427,13 @@ section{
     }
 }
 
-.main .contact{
+.contact{
     background: #5710ff;
-    background: #8267be;
     color: white;
     height: 80vh;
 
     .contact-container .text{
-        color: white !important;
+
     }
 }
 @media only screen and (min-width: 800px){
